<resources>
    <string name="app_name">Homework Tracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_homework_detail">Details: </string>
    <string name="isDone">Done?</string>
    <string name="duedate">Due date: </string>
    <string name="slash">/</string>
    <string name="add_new_homework">Add New Homework</string>
    <string name="export">Export</string>
    <string name="markasdone">Mark as done</string>
    <string name="homeworkpositionclicked">HOMEWORK_POSITION_CLICKED</string>
    <string name="reminder">Reminder: </string>
    <string name="space">" "</string>
    <string name="subject">Subject:</string>
    <string name="savenewhomework">Save New Homework</string>
    <string name="nothing"/>
    <string name="nohomeworknamewarning">Please enter a homework name.</string>
    <string name="noreminderwarning">Please enter the reminder date for this homework.</string>
    <string name="noduedatewarning">Please enter the due date for this homework.</string>
    <string name="nosubjectwarning">Please enter the subject for this homework.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="homework">Homework:</string>
    <string name="alarmtext">Hey! Please start doing your homework!</string>
    <string name="alarmtitle">Homework Tracker Alarm</string>
    <string name="exporthomeworkastext">Export Homework as Text</string>
    <string name="homeworktrackerexport">Homework Tracker Export</string>
    <string name="texthtml">text/html</string>
    <string name="ALRT_OBJ_NAME">ALRT_OBJ_NAME</string>
</resources>
